--- a/DetectFace/res/layout/detectlayout.xml
+++ b/DetectFace/res/layout/detectlayout.xml
@@ -14,6 +14,7 @@
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:id="@+id/detect_face"
-  		android:text="@string/detect_face"/>
+  		android:text="@string/detect_face"
+  		android:layout_gravity="center_horizontal"/>
   	
 </LinearLayout>
